Bug Fix: add room